--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -389,31 +389,13 @@ services:
       - "PGID=${PGID}"
     image: linuxserver/ubooquity
     labels: 
-      - traefik.docker.network=traefik_proxy
-      - traefik.enable=true
-      # - traefik.backend=ubooquity
-      - "traefik.web.frontend.rule=Host:ubooquity.${DOMAINNAME}"
-      - traefik.web.port=2202
-      - traefik.web.frontend.headers.SSLRedirect=true
-      - traefik.web.frontend.headers.STSSeconds=315360000
-      - traefik.web.frontend.headers.browserXSSFilter=true
-      - traefik.web.frontend.headers.contentTypeNosniff=true
-      - traefik.web.frontend.headers.forceSTSHeader=true
-      - traefik.web.frontend.headers.SSLHost=frost.haus
-      - traefik.web.frontend.headers.STSIncludeSubdomains=true
-      - traefik.web.frontend.headers.STSPreload=true
-      - traefik.web.frontend.headers.frameDeny=false
-      - "traefik.admin.frontend.rule=Host:ubooquity.${DOMAINNAME}; PathPrefix:/admin,/admin-res,/admin-api"
+      - traefik.docker.network=proxied
+      - traefik.frontend.rule=Host:ubooquity.${DOMAIN}
+      - traefik.port=2202
+      - traefik.default.protocol=http
+      - traefik.admin.frontend.rule=Host:admin-ubooquity.${DOMAIN}
       - traefik.admin.port=2203
-      - traefik.admin.frontend.headers.SSLRedirect=true
-      - traefik.admin.frontend.headers.STSSeconds=315360000
-      - traefik.admin.frontend.headers.browserXSSFilter=true
-      - traefik.admin.frontend.headers.contentTypeNosniff=true
-      - traefik.admin.frontend.headers.forceSTSHeader=true
-      - traefik.admin.frontend.headers.SSLHost=frost.haus
-      - traefik.admin.frontend.headers.STSIncludeSubdomains=true
-      - traefik.admin.frontend.headers.STSPreload=true
-      - traefik.admin.frontend.headers.frameDeny=false
+      - traefik.admin.protocol=http
     networks: 
       - traefik_proxy
     restart: always
