--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -392,7 +392,7 @@ services:
       - traefik.enable=true
       - traefik.backend=ubooquity
       - traefik.docker.network=traefik_proxy
-      - "traefik.web.frontend.rule=Host:ubooquity.${DOMAINNAME}; PathPrefix:/ubooquity"
+      - "traefik.web.frontend.rule=Host:ubooquity.${DOMAINNAME}"
       - traefik.web.port=2202
       - traefik.web.headers.SSLRedirect=true
       - traefik.web.headers.STSSeconds=315360000
